# home-automation

./: README.md
home-assistant/: README.md  Vagrantfile
home-assistant/provisioning/: playbook.yml
home-assistant/provisioning/group_vars/all/: defaults  defaults~  vault
home-assistant/provisioning/roles/home-assistant/: home-assistant.yml
home-assistant/provisioning/roles/home-assistant/defaults/: main.yml
home-assistant/provisioning/roles/home-assistant/handlers/: main.yml
home-assistant/provisioning/roles/home-assistant/tasks/: dynv6.yml  installation.yml  letsencrypt.yml  main.yml  nginx.yml  preparation.yml
home-assistant/provisioning/roles/home-assistant/templates/: dynv6_handler.sh.j2  nginx.conf.j2  nginx.init.conf.j2
home-assistant/provisioning/roles/mosquitto/: .gitignore
home-assistant/provisioning/roles/mosquitto/defaults/: main.yml
home-assistant/provisioning/roles/mosquitto/tasks/: #main.yml#
home-assistant/provisioning/roles/openhab2/tasks/: dynv6.yml  letsencrypt.yml  main.yml  main.yml~  mysql.yml  nginx.yml  openhab.yml  packages.yml
openhab/: Vagrantfile
openhab/.vagrant/machines/default/virtualbox/: action_provision  (+6 more)
openhab/provisioning/: playbook.yml
openhab/provisioning/group_vars/all/: defaults  vault  vault.sample
pi_bootstrap/: README.md  bootstrap.sh
xioami_sensor_poller/: #.gitignore#  .gitignore  pyproject.toml  set_bluepy_permissions.sh  set_bluepy_permissions.sh~
xioami_sensor_poller/tests/: test_xioami_sensor_poller.py
xioami_sensor_poller/xioami_sensor_poller/: config.py  tempPoller.py  tempPoller.py~
(+27 files in other folders)
